--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 	<link rel="stylesheet" href="/style/style.css">
 	<title>Websocket chat</title>
 </head>
 <body>
 	<h1>Chat!</h1>
+	<script src="/scripts/chat.js"></script>
 </body>
 </html>
