--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
 	<title>Websocket chat</title>
 </head>
 <body>
-	<h1>Chat!</h1>
+	<div id="chat">
+		<div id="chat-window">
+			<div id="output"></div>
+		</div>
+		<input type="text" id="handle" placeholder="Name">
+		<input type="text" id="message" placeholder="Message">
+		<button id="send">Send</button>
+	</div>
 	<script src="/scripts/chat.js"></script>
 </body>
 </html>
