Add typing message, scroll when message recived, clear message content

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,13 @@
 	<div id="chat">
 		<div id="chat-window">
 			<div id="output"></div>
+			<div id="feedback"></div>
 		</div>
 		<input type="text" id="handle" placeholder="Name">
 		<input type="text" id="message" placeholder="Message">
 		<button id="send">Send</button>
 	</div>
 	<script src="/scripts/chat.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 </body>
 </html>
